# BlazorRustExperiments

./: .gitignore  README.md
.github/workflows/: dotnet.yml  main.yml
BlazorRustExperiments/: BlazorRustExperiments.sln  README.md
BlazorRustExperiments/BlazorRustExperiments/: BlazorRustExperiments.csproj  CallbackExperiment.cs  Extensions.cs  Global.cs  Program.cs  Temporary.cs  _Imports.razor
BlazorRustExperiments/BlazorRustExperiments/Advanced/: CallbackExperiment.cs
BlazorRustExperiments/BlazorRustExperiments/Pages/: BoardTest.razor  CallbackPage.razor  CallbacksPage.razor  Index.razor  JsonPage.razor  JsonTestPage.razor  MiscellanyPage.razor  NativeTypesPage.razor  RustMiscellanyPage.razor  StructTestPage.razor
BlazorRustExperiments/BlazorRustExperiments/Properties/: launchSettings.json
BlazorRustExperiments/BlazorRustExperiments/Shared/: Board.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css
BlazorRustExperiments/BlazorRustExperiments/wwwroot/: index.html
BlazorRustExperiments/BlazorRustExperiments/wwwroot/css/: app.css
ConsoleApp/: App.cs  ConsoleApp.csproj  Extensions.cs  Global.cs  GlobalSuppressions.cs  GlobalUsings.cs  Notes.txt  Program.cs  RustAndJson.cs  RustAndStruct.cs  RustCallback.cs  RustEvents.cs  RustJson.cs  RustMiscellany.cs  RustStruct.cs
rstlib/: Cargo.toml  Notes.txt
rstlib/src/: basic_sample.rs  callbacks_sample.rs  json_sample.rs  lib.rs  strings_sample.rs  structs_sample.rs
