[package]
name = "rstlib"
version = "0.1.0"
authors = ["Harvey Triana <harveytriana@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rust_library"

# WebAssembly
# -----------------------------------------------------------------
# must be commented the line for dylib.
# compile: cargo build --target wasm32-unknown-emscripten --release
# This creates a .a file in target\wasm32-unknown-emscripten\release
crate-type = ["staticlib"]

# Console
# -----------------------------------------------------------------
# must be commented the line for staticlib. 
# compile: > cargo build --release
# This creates a .dll file in target\release
# crate-type = ["dylib"]

# JSON https://bit.ly/3kBDMok

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"