[package]
name = "rstlib"
version = "0.1.0"
authors = ["Harvey Triana <harveytriana@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
name="rstlib"

# WebAssembly for Emscripten (.a)
# -----------------------------------------------------------------
# Require: staticlib.
# compile: cargo build --target wasm32-unknown-emscripten --release
crate-type = ["staticlib"]

# Console (.dll)
# -----------------------------------------------------------------
# Require: dylib 
# compile: cargo build --release
# crate-type = ["dylib"]

# JSON https://bit.ly/3kBDMok
# libc https://rust-lang.github.io/libc/
# libc = "0.2"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"