[package]
name = "rstlib"
version = "0.1.0"
authors = ["Harvey Triana <harveytriana@gmail.com>"]

[lib]
name="rstlib"

# WebAssembly for Emscripten (.a)
# -----------------------------------------------------------------
# compile: cargo build --target wasm32-unknown-emscripten --release
# crate-type = ["staticlib"]

# Dynamic library for C# Console (.dll)
# -----------------------------------------------------------------
# compile: cargo build --release
crate-type = ["dylib"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"